Fix card spacing issues

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -383,8 +383,8 @@ body {
 #h_e_card {
   margin-left: 5em !important;
   margin-right: 5em!important;
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
+  margin-top: .5em !important;
+  margin-bottom: .5em !important;
 }
 
 .h_e_btn_bottm {
@@ -435,8 +435,8 @@ a {
 
 @media (max-width: 950px) {
   #h_e_card {
-    margin-left: 0 !important;
-    margin-right: 0!important;
+    margin-left: .5em !important;
+    margin-right: .5em !important;
   }
 }
 
